apps/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  labels:
    role: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      role: homeassistant
  template:
    metadata:
      labels:
        role: homeassistant
    spec:
      containers:
        - name: homeassistant
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /config/configuration.yaml
              name: config-yaml
              subPath: configuration.yaml
              readOnly: true
          image: homeassistant/home-assistant:stable
          ports:
            - containerPort: 8123
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homeassistant-config
        - name: config-yaml
          configMap:
            name: homeassistant-config-yaml
