apps/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-internal
spec:
  type: ClusterIP
  selector:
    role: homeassistant
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 8123
